src/styles/global.css
@import "@fontsource-variable/space-grotesk";
@import "@fontsource-variable/inter";

:root {
    --color-primary: #f8f8f6;
    --color-secondary: #171614;
    --max-width: 1440px;
    --font-space-grotesk: "Space Grotesk Variable", sans-serif;
    --font-inter: "Inter Variable", sans-serif;
    --gutter: clamp(1rem, 5vw, 3rem);
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    font-family: var(--font-space-grotesk);
    line-height: 1.5;
    background-color: var(--color-primary);
    color: var(--color-secondary);
}

body {
    margin: 0;
}

.container {
    max-width: var(--max-width);
    padding-inline: var(--gutter);
    margin-inline: auto;
}

.heading {
    font-size: clamp(3rem, 8vw, 4rem);
    margin-bottom: 1rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.heading-link {
    text-decoration: underline dotted;
    text-underline-offset: 0.5rem;
    color: inherit;
    display: inline-block;
    transition:
        transform 0.2s ease,
        text-decoration-color 0.2s ease;
}

.heading-link:hover {
    text-underline-offset: 0.25rem;
    text-decoration: underline solid;
}

.content-wrapper h1,
.content-wrapper h2,
.content-wrapper h3 {
    font-family: var(--font-space-grotesk);
    font-weight: bold;
    color: var(--color-secondary);
    margin-block: 2rem 1rem;
}

.content-wrapper h1 {
    font-size: 2.25rem;
}
.content-wrapper h2 {
    font-size: 1.75rem;
}
.content-wrapper h3 {
    font-size: 1.35rem;
}

.content-wrapper p {
    font-size: 1.125rem;
    line-height: 1.7;
    margin-bottom: 1.25rem;
    color: #333;
}

.content-wrapper a {
    color: #0066cc;
    text-decoration: underline;
}

.content-wrapper ul,
.content-wrapper ol {
    margin-bottom: 1.5rem;
    padding-left: 1.5rem;
}

.content-wrapper li {
    font-size: 1.125rem;
    margin-bottom: 0.5rem;
    line-height: 1.5;
}

.content-wrapper pre {
    padding: 1rem;
    border-radius: 0.5rem;
    background-color: #f4f4f4;
    overflow-x: auto;
}

